--- a/index.ipynb
+++ b/index.ipynb
@@ -192,7 +192,8 @@
     }
    ],
    "source": [
-    "Title = \"Ceo\" # 'CEO'"
+    "title = \"Ceo\" # 'CEO'\n",
+    "title.title"
    ]
   },
   {
