Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -177,23 +177,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Ceo'"
+       "<function str.title>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "title = \"Ceo\" # 'CEO'\n",
-    "title.title"
+    "position = \"Ceo\" # 'CEO'\n",
+    "tit.title"
    ]
   },
   {
