Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -177,23 +177,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function str.title>"
+       "<function str.upper>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "position = \"Ceo\" # 'CEO'\n",
-    "tit.title"
+    "position.upper"
    ]
   },
   {
