--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,7 @@
    ],
    "source": [
     "email = \"art.vandelay@vandelay.co\" # False\n",
-    "email[-4,-1] == \".com\""
+    "email[-4] == \".com\""
    ]
   },
   {
