--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,7 @@
    ],
    "source": [
     "email = \"art.vandelay@vandelay.co\" # False\n",
-    "last4 = "
+    "last4 = email[-4"
    ]
   },
   {
