--- a/index.ipynb
+++ b/index.ipynb
@@ -240,8 +240,8 @@
    },
    "outputs": [],
    "source": [
-    "'vandelay.com' # 'www.vandelay.com'\n",
-    "'www'+addre"
+    "a'vandelay.com' # 'www.vandelay.com'\n",
+    "'www' + addressEnd"
    ]
   },
   {
